handle plural properly

BUG: 96797

svn path=/trunk/kdepim/akregator/; revision=379353